removed nav for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- // Nav Bar -->
-    <div class="Navbar">
+    <!-- <div class="Navbar">
       <h1 class="logo"><img id="logo-main" src="assets/images/ktmc.png"></h1>
       <div class="Navbar__Link-toggle">
         <i class="fas fa-bars"><br><div id="menu">MENU</div></i>
@@ -55,12 +55,9 @@
           <div class="Navbar__Links" id="STnav">
            <i>SECURITIESTRACKER</i>
           </div>
-          <!-- <div class="Navbar__Links">
-            <i class="fas fa-search"></i> SEARCH
-          </div> -->
         </nav>
       </div>
-    </div>
+    </div> -->
     <!-- // End of Nav Bar -->
     
 <body>
@@ -68,7 +65,7 @@
     <div class="container-fluid bg">
     <div class="container flex">
         <div class="row flexcenter">
-          <div class="col-md-4"><p class="preheading" data-aos="fade-right">A Message from</p><h2 class="title" data-aos="fade-right">Kessler Topaz Meltzer & Check</h2></div>
+          <div class="col-md-4"><p class="preheading" data-aos="fade-right">A Message from</p><h2 class="title" data-aos="fade-right">Kessler Topaz Meltzer & Check :</h2></div>
           <div class="col-md-7"><p class="para" data-aos="fade-down">There is great pain in this country and it cannot be ignored.  Kessler Topaz is greatly concerned about recent events and understands their impact on everyone.  The murder of George Floyd at the hands of the Minneapolis Police on May 25th has set off a series of events across the country, and around the globe, that are both inspiring and troubling.  While we cannot condone the destruction of property, we cannot discount the frustration and anger that underlies much of it. 
 <br><br>
 In particular, we can be inspired by the tens of thousands of peaceful protestors making their voices heard in all 50 states and commanding us to organize and insist on change.  As President Obama recently reminded us, this country was founded on protest and it has an important place in our society.  George Floyd is only the latest in a long series of unjustified killings by police.  This must stop.  We must do better as a country and as a people.  The reality is that racism and bias are alive and well in the United States and increasingly out in the open; yet, there are actions we can all take to be more accepting and understanding and reverse this rising tide of hatred.<br><br>
