--- a/index.html
+++ b/index.html
@@ -26,47 +26,10 @@
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     
-    <!-- // Nav Bar -->
-    <div class="Navbar">
-      <h1 class="logo"><img id="logo-main" src="assets/images/ktmc.png"></h1>
-      <div class="Navbar__Link-toggle">
-        <i class="fas fa-bars"><br><div id="menu">MENU</div></i>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="lg-col-12">
-        <nav class="Navbar__Items Navbar__Items--center">
-          <div class="Navbar__Links">
-           ABOUT US
-          </div>
-          <div class="Navbar__Links">
-           OUR PEOPLE
-          </div>
-          <div class="Navbar__Links">
-           PRACTICES
-          </div>
-          <div class="Navbar__Links">
-           CASES
-          </div>
-          <div class="Navbar__Links">
-           NEWS
-          </div>
-          <div class="Navbar__Links">
-           COMMUNITY
-          </div>
-          <div class="Navbar__Links">
-           CAREERS
-          </div>
-          <div class="Navbar__Links" id="STnav">
-           <i>SECURITIESTRACKER</i>
-          </div>
-        </nav>
-      </div>
-    </div>
-    <!-- // End of Nav Bar -->
     
 <body>
+
+    <div id="back">Back to KTMC</div>
 
     <div class="container-fluid bg">
     <div class="container flex">
