--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 <body>
 
-    <div id="back">Back to KTMC</div>
+    <div id="back"><i class="fa fa-angle-left"></i> &nbsp Back to KTMC</div>
 
     <div class="container-fluid bg">
     <div class="container flex">
